# VISIONCHESS

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/core/: exceptions.py  logging.py  middleware.py  settings.py
apps/api/app/models/: __init__.py  analysis.py  scan.py
apps/api/app/services/: analysis_service.py  scan_service.py
apps/api/app/utils/: file_storage.py  image_validation.py
apps/api/tests/: test_fen_validate_castling.py  test_lc2fen_adapter.py  test_lc2fen_yolo.py
apps/api/tests/benchmark/: test_benchmark_metrics.py  test_real_photo_benchmark.py
apps/api/tests/integration/: test_api.py  test_detect_board.py  test_detect_pieces.py
apps/api/vision/: __init__.py  chessboard_detector.py
apps/api/vision/backends/: __init__.py  registry.py
apps/api/vision/benchmark/: __init__.py  fen_grid.py  manifest.py  metrics.py  report.py  runner.py
apps/api/vision/board/: __init__.py  config.py  contours.py  corners.py  debug_viz.py  detection_debug.py  detector.py  edges.py  exceptions.py  grid.py  grid_config.py  grid_homography.py  grid_intersections.py  grid_lines.py  grid_sampling.py  grid_solver.py  io.py  mesh_rectification.py  playing_grid.py  preprocessing.py  schemas.py  split.py  square_warp.py  transform.py  types.py  upscale.py
apps/api/vision/classification/: __init__.py  backend_protocol.py  (+19 more)
ml/: pyproject.toml
ml/chesscog_loader/chesscog/: __init__.py
ml/dataset/: lichess_auto_label.py  synthetic_board.py
ml/inference/: __init__.py  classifier.py
ml/models/: README.md
ml/models/piece_classifier/: piece_classifier.json
ml/models/pretrained/: chesscog_occupancy.json  chesscog_piece.json  yolo11n_chess_pieces.json
ml/scripts/: build_from_lichess.py  build_occupancy_dataset.py  export_chesscog_onnx.py  export_chesscog_standalone.py  generate_synthetic_dataset.py  import_class_folder.py  setup_lc2fen.py  setup_pretrained.py  setup_yolo_chess.py
ml/training/: __init__.py  cli.py  config.py  dataset.py  engine.py  export.py  labels.py  metrics.py  model.py  occupancy_cli.py  occupancy_config.py  transforms.py
(+347 files in other folders)
