[project]
name = "visionchess-api"
version = "0.1.0"
description = "Chess board vision API — detect, FEN, analyze"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "opencv-python-headless>=4.10",
    "numpy>=2.1",
    "python-chess>=1.999",
    "structlog>=24.4",
]

[project.optional-dependencies]
ml = [
    "onnxruntime>=1.20",
]
yolo = [
    "onnxruntime>=1.20",
    "huggingface_hub>=0.26",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "benchmark: real-photo benchmark (slow, needs ONNX + manifest)",
    "slow: long-running tests",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "vision*"]
